# demongrep

./: .gitignore  Cargo.toml  DEVELOPMENT.md  PHASE1_COMPLETE.md  PROJECT_STATUS.md  README.md  TODO.md
docs/: CHUNKING_ANALYSIS.md  PHASE2_1_COMPLETE.md  PHASE2_2_COMPLETE.md  PHASE3_COMPLETE.md  PHASE4_PROGRESS.md  SEMANTIC_CHUNKING_DESIGN.md
examples/: embedding_demo.rs  file_walker_demo.rs  grammar_demo.rs  semantic_demo.rs  vectordb_demo.rs
src/: lib.rs  main.rs  output.rs
src/bench/: mod.rs
src/cache/: mod.rs
src/chunker/: dedup.rs  extractor.rs  fallback.rs  grammar.rs  mod.rs  parser.rs  semantic.rs  tree_sitter.rs
src/cli/: doctor.rs  mod.rs  setup.rs
src/config/: mod.rs
src/embed/: batch.rs  cache.rs  embedder.rs  mod.rs
src/file/: binary.rs  language.rs  mod.rs
src/fts/: tantivy_store.rs
src/index/: mod.rs
src/rerank/: mod.rs  neural.rs
src/search/: mod.rs
src/server/: mod.rs
src/vectordb/: mod.rs  store.rs
src/watch/: mod.rs
